2004-09-28  Mattias Ellert <mattias.ellert@tsl.uu.se>

	* po/sane-backends.sv.po: Updated Swedish translation file

2004-09-27  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* doc/descriptions/unsupported.desc doc/descriptions/snapscan.desc:
	  Changed entry for Epson 2580 (should work with SnapScan backend).

2004-09-21  Gerhard Jaeger <gerhard@gjaeger.de>

	* doc/descriptions/unsupported.desc: fixed Plustek entries.

2004-09-19  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added Compeye Simplex 1236C.

2004-09-14  Karl Heinz Kremer <khk@khk.net>
	
	* backend/epson_usb.c: add USB device ID for CX6400 back in
	* backend/epson.c: disable "feed" command for Perfection 1640 w/ ADF

2004-09-08  Gerhard Jaeger <gerhard@gjaeger.de>

	* doc/plustek/Plustek-USB.changes: Update.
	* doc/descriptions/unsupported.desc: Added Microtek Scanmaker 5700,
	  ArtixScan 4000tf and Medion MD41985.

2004-09-06  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* configure: Regenerated.
	* doc/descriptions/unsupported.desc
	  doc/descriptions-external/genesys.desc: Moved HP 35xx series to
	  unsupported.desc because these scanners use a RTS8801 chip (no
	  Genesys chipset).
	
2004-09-06  Jochen Eisinger <jochen@penguin-breeder.org>

	* backend/mustek_pp.c: clarify error message
	* configure.in: only build the mustek_pp backend, if parallel
	  port support of any kind is present

2004-09-06  Gerhard Jaeger <gerhard@gjaeger.de>

	* backend/plustek.c: Bumped build number.
	* backend/plustek-usbdevs.c: Fixed bug #300913.
	
2004-09-05  Julien Blache <jb@jblache.org>

	* More auth_callback() fixes, although they're not critical.

2004-09-03  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added Lexmark X1130, Dell
	  1600n. Removed Canon LiDE 35 (now in genesys.desc) and Epson
	  Perfection 2480 (now in snapscan.desc).
	* doc/descriptions-external/genesys.desc: Added Canon LiDE 35.