@@ -94,6 +94,7 @@ scsi LinoHell Office2
 scsi LinoHell SAPHIR2
 scsi LinoHell SAPHIR3
 scsi Linotype SAPHIR4
+scsi LinoHell OPAL2
 scsi HDM LS4H1S
 scsi Nikon AX-110
 scsi Nikon AX-210
