@@ -546,6 +546,52 @@ Here is a list of the UMAX-compatible scanners:
 
 <tr>
 <td>
+<center>Opal2</center>
+</td>
+
+<td>
+<center>LinoHell</center>
+</td>
+
+<td>
+<center>OPAL2</center>
+</td>
+
+<td>
+<center>&nbsp;</center>
+</td>
+
+<td>
+<center>incl</center>
+</td>
+
+<td>
+<center>&nbsp;</center>
+</td>
+
+<td>
+<center>ok</center>
+</td>
+
+<td>
+<center>ok</center>
+</td>
+
+<td>
+<center>ok</center>
+</td>
+
+<td>
+<center>1,8,12,24,36</center>
+</td>
+
+<td>
+<center>700 x 1400</center>
+</td>
+</tr>
+
+<tr>
+<td>
 <center>Opal Ultra</center>
 </td>
 
@@ -990,7 +1036,7 @@ Here is a list of the UMAX-compatible scanners:
 
 <center>
 <br>
-<font color="#009900">This page has been changed on 12th. february 2001</font>
+<font color="#009900">This page has been changed on 1st. october 2004</font>
 <br>
 <br>
 </center>
